# mctech-crd

./: .cookiecutter.json  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  launcher.sh  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
config/: dev.yaml  no_gps.yaml  simple_relay.yaml  video.yaml
data/: serial_number.txt
docs/: conf.py  features.md  index.md  reference.md  setup_existing_pi.md  usage.md
src/: config_reader.py  cosmic.py  gm_sensor.py  logging_config.py  media_player.py  relay_output.py  serial_number.py  sixfab_sensors.py  text_event_writer.py
src/mctech_crd/: __init__.py  config_reader.py  cosmic.py  gm_sensor.py  google_sheets.py  gpio_sweep.py  logging_config.py  media_player.py  midi_input.py  relay_output.py  serial_number.py  servo_output.py  sixfab_sensors.py  switch_input.py  text_event_writer.py
src/mctech_crd/cli/: __main__.py
src/mctech_crd/config_default/: dev.yaml  mct_array.yaml  no_gps.yaml  simple_relay.yaml  video.yaml
src/mctech_crd/shell/: .python-version  boot.sh  constants.sh  get_latest_release.sh  init.sh  login.sh  rc.local  update.sh
src/mctech_crd/shell/utils/: get_latest_release.sh  update_package.sh  update_pyenv.sh
tests/: __init__.py  test_main.py
