[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mctech_crd"
authors = [{name = "tombola@github"}, {name = "glenpike@github"}]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/MC-Technology/cosmic-pi-client"
